# network_communication

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config_file.json
network_communication/: CMakeLists.txt  CommunicationManager.cpp  CommunicationManager.h  TcpClient.h  TcpConnection.h  TcpServer.h
test/: CMakeLists.txt  client.cpp  server.cpp
